--- a/.github/workflows/intergrate.yml
+++ b/.github/workflows/intergrate.yml
@@ -12,9 +12,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Set up Python 
-      uses: actions/setup-python@v1
-      with:
-        python-version: '3.10'
+#    - name: Set up Python 
+#      uses: actions/setup-python@v1
+#      with:
+#        python-version: '3.10'
     - name: session
       uses: lhotari/action-upterm@v1 
